--- a/index.html
+++ b/index.html
@@ -13,9 +13,29 @@
     }
 
     body {
-      background-color: rgb(13, 13, 185);
+      background-color: rgb(153, 153, 204);
       color: white;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
     }
+    nav{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 100px;
+        background-color: lightslategray;
+    }
+
+    nav ul{
+        display:flex;
+        justify-content: center;
+    }
+
+    nav ul li{
+        list-style: none;
+        margin: 0 23px;
+    }
+
   </style>
 </head>
 
@@ -24,8 +44,16 @@
     <header>
         <nav>
             
-            <div class="left"></div>
-            <div class="right"></div>
+            <div class="left">Rahul's Portfolio</div>
+            <div class="right">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Projects</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
 
         </nav>
     </header>
